implemented map, filter, concat using Javascript
implemented map, filter, concat using Javascript

--- a/Array.html
+++ b/Array.html
@@ -6,29 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-<script>
-    //concat
-    let a = ['seoul', 'busan', 'daegu'];
-    let b = ['daejeon', 'sejong'];
-
-    let c = a.concat(b);
-    document.write("concat: ");
-    document.write(c);
-
-    //map
-    let d = ['1', '2', '3'];
-    let e = d.map(x => x * 10);
-
-    document.write('<br> map: ')
-    document.write(e);
-
-    //filter
-    let f = ['lmao', 'omg', 'wassup'];
-    let g = f.filter(word => word.length > 3);
-    document.write('<br> filter: ');
-    document.write(g);
-
-</script>
+<h1>Pick Homework</h1>
+<script src="Array.js"></script>
 </body>
 </html>
